[package]
name = "trebek"
version = "0.1.0"
authors = ["Alec Brickner <alec@primer.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
# redis = "0.15.1"
lapin = "0.39.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sublime_fuzzy = "0.6.0"

[dependencies.serenity]
version = "0.8"
features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]